# drodllo-backend

./: .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: manage.py
src/drollo_service/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/tasks/: __init__.py  admin.py  apps.py  tests.py  views.py
src/users/: admin.py  apps.py  models.py  views.py
